Eliminado workflow y modificado index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hola soy Javier 👍</h1>    
     <h1>Hola soy Sebastian /ᐠ - ˕ -マ</h1>    
+    <img src="https://media.giphy.com/media/3o6Zt8MgUuvSbkZYWc/giphy.gif" alt="gif">
 </body>
 </html>
